tests/NormalTests/paczka1/small_fuzzy/18472714.err
Error in line 4: bSfVJH4fAE A293 20,4
Error in line 5: A132 A163 58,3
